package enums;

public enum PaymentType {

    SINGLE_PAYMENT,

    SPLIT_PAYMENT
}

