package enums;

public enum UserRole {

    PARENT,

    ADMINISTRATOR
}

