@startuml Modèle de Domaine

title Diagramme de Classes — Modèle de Domaine\n(Models, Enums)

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #F8F9FA
    BorderColor #495057
    HeaderBackgroundColor #343A40
    HeaderFontColor #FFFFFF
    ArrowColor #495057
}
skinparam packageStyle rectangle
skinparam shadowing false

' ─────────────────────────────────────────
'  ENUMS
' ─────────────────────────────────────────
package enums {

    enum PaymentType <<enumeration>> {
        SINGLE_PAYMENT
        SPLIT_PAYMENT
    }

    enum UserRole <<enumeration>> {
        PARENT
        ADMINISTRATOR
    }
}

' ─────────────────────────────────────────
'  MODÈLES UTILISATEURS
' ─────────────────────────────────────────
package Models {

    abstract class User {
        # id : int
        # firstName : String
        # lastName : String
        # email : String
        # password : String
        --
        + User()
        + User(id, firstName, lastName, email, password)
        + {abstract} displayMenu() : void
        + getId() : int
        + getFirstName() : String
        + getLastName() : String
        + getEmail() : String
        + getPassword() : String
        + setId(id) : void
        + setFirstName(firstName) : void
        + setLastName(lastName) : void
        + setEmail(email) : void
        + setPassword(password) : void
    }

    class Parent {
        - children : List<Child>
        --
        + Parent()
        + Parent(id, firstName, lastName, email, password)
        + addChild(child : Child) : void
        + displayMenu() : void
        + getChildren() : List<Child>
        + setChildren(children : List<Child>) : void
    }

    class Administrator {
        --
        + Administrator()
        + Administrator(id, firstName, lastName, email, password)
        + displayMenu() : void
    }

    ' ─────────────────────────────────────────
    '  AUTRES MODÈLES
    ' ─────────────────────────────────────────
    class Child {
        - id : int
        - parentId : int
        - firstName : String
        - lastName : String
        - age : int
        - level : String
        - birthDate : LocalDate
        --
        + Child()
        + Child(id, parentId, firstName, lastName, age, level, birthDate)
        + getId() : int
        + getParentId() : int
        + getFirstName() : String
        + getLastName() : String
        + getAge() : int
        + getLevel() : String
        + getBirthDate() : LocalDate
        ' setters omis pour lisibilité
    }

    class ClassRoom {
        - id : int
        - name : String
        - capacity : int
        --
        + ClassRoom()
        + ClassRoom(id, name, capacity)
        + getId() : int
        + getName() : String
        + getCapacity() : int
        + toString() : String
    }

    class TimeSlot {
        - id : int
        - subject : String
        - schedule : LocalDateTime
        - maxCapacity : int
        - registrationCount : int
        --
        + TimeSlot()
        + TimeSlot(id, subject, schedule, classroom, maxCapacity)
        + register() : void
        + incrementRegistrationCount() : void
        + refreshState() : void
        + isAvailable() : boolean
        + toString() : String
        + getId() : int
        + getSubject() : String
        + getSchedule() : LocalDateTime
        + getClassroom() : ClassRoom
        + getMaxCapacity() : int
        + getRegistrationCount() : int
    }

    class Registration {
        - id : int
        - childId : int
        - timeSlotId : int
        - parentId : int
        - registrationDate : LocalDate
        --
        + Registration()
        + Registration(id, childId, timeSlotId, parentId, registrationDate, payment)
        + getId() : int
        + getChildId() : int
        + getTimeSlotId() : int
        + getParentId() : int
        + getRegistrationDate() : LocalDate
        + getPayment() : Payment
        + getChild() : Child
        + getTimeSlot() : TimeSlot
    }

    class Payment {
        - id : int
        - totalAmount : double
        - paidAmount : double
        - remainingAmount : double
        - installmentCount : int
        - completedInstallments : int
        - remainingInstallments : int
        - completed : boolean
        --
        + Payment()
        + Payment(id, totalAmount, installmentCount, paymentType)
        + makePayment(amount : double) : void
        + getId() : int
        + getTotalAmount() : double
        + getPaidAmount() : double
        + getRemainingAmount() : double
        + getInstallmentCount() : int
        + getPaymentType() : PaymentType
        + isCompleted() : boolean
    }

    class Notification {
        - id : int
        - parentId : int
        - message : String
        - sent : boolean
        - sentDate : LocalDateTime
        --
        + Notification()
        + Notification(id, parentId, message)
        + markAsSent() : void
        + getId() : int
        + getParentId() : int
        + getMessage() : String
        + isSent() : boolean
        + getSentDate() : LocalDateTime
    }
}

' ─────────────────────────────────────────
'  HÉRITAGE
' ─────────────────────────────────────────
User <|-- Parent      : extends
User <|-- Administrator : extends

' ─────────────────────────────────────────
'  ASSOCIATIONS
' ─────────────────────────────────────────
Parent "1" o-- "0..*" Child             : agrégation\n(children)
TimeSlot "1" *-- "1" ClassRoom          : composition\n(classroom)
Registration "1" *-- "1" Payment        : composition\n(payment)
Registration ..> Child                  : référence (childId)
Registration ..> TimeSlot               : référence (timeSlotId)
Registration ..> Parent                 : référence (parentId)
Payment --> PaymentType                 : utilise
Notification ..> Parent                 : notifie (parentId)

@enduml
